fix: spacing and scrollbar bug

--- a/_card-gallery.scss
+++ b/_card-gallery.scss
@@ -46,7 +46,8 @@
     overflow-x: scroll;
     @media (min-width: $md) {
       width: 100%;
-      padding-left: 0;
+      margin-left: 0;
+      overflow: auto;
     }
     .wpb_wrapper {
       display: flex;
